update main header & main footer

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+.red-gradient {
+  background: linear-gradient(120deg, #d53369 0%, #daae51 100%);
+}
